feat(project): adds redirect to github

--- a/projects/index.html
+++ b/projects/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Projects
 section: projects
 ---
-
+<script>document.location="https://github.com/aswinmguptha"</script>
 <div class="container center">
   <div class="content center">
     <div class="page-title">
